<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:background="#E6E6E6"
    android:orientation="vertical">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/title"
        android:id="@+id/textView"
        android:textStyle="bold"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectLabel"
        android:id="@+id/selectButton"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/box"
        android:onClick="onClick"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/box">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/bucketLabel"
            android:id="@+id/textView2"
            android:gravity="center"/>

        <Spinner
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/bucketSpinner"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="10dp"
        android:padding="10dp"
        android:background="@drawable/box"
        android:id="@+id/newBucketLayout"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/newBucketLabel"
            android:id="@+id/newBucketLabel"
            android:gravity="center"/>

        <EditText
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:id="@+id/newBucketEdit"
            android:layout_gravity="center_horizontal"
            android:layout_marginStart="10dp"
            android:gravity="center"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/uploadLabel"
        android:id="@+id/uploadButton"
        android:layout_marginBottom="10dp"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:background="@drawable/box"
        android:onClick="onClick"
        android:enabled="false"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:padding="10dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/box"/>

</LinearLayout>
